@@ -4,6 +4,7 @@
 #export DEB_BUILD_OPTIONS="nostrip"
 
 DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+VERSION = $(shell dpkg-parsechangelog | sed -n -e '/^Version:/s/.*: //p')
 
 ifneq (,$(findstring stage1,$(DEB_BUILD_PROFILES)))
 BOOTSTRAP_DH_FLAGS := -Ngir1.2-gudev-1.0 -Nlibgudev-1.0-0 -Nlibgudev-1.0-dev
@@ -297,3 +298,10 @@ ifeq (,$(findstring stage1,$(DEB_BUILD_PROFILES)))
 else
 	dh $@ --with autoreconf,python3 $(BOOTSTRAP_DH_FLAGS)
 endif
+
+override_dh_gencontrol:
+	# Ubuntu has an epoch on gudev
+	if dpkg-vendor --is ubuntu; then \
+		dh_gencontrol -plibgudev-1.0-0 -plibgudev-1.0-dev -pgir1.2-gudev-1.0 -- "-v1:$(VERSION)"; \
+	fi
+	dh_gencontrol --remaining-packages
